task1/test_results_defects/infer_test/memory_allocation_failure/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:56: error: Inferbo Alloc Is Big
  Length: 4294967295.
  54. {
  55. 	long long int i=0;
  56. 	long long int *ptr=(long long*) malloc(MAX_VAL *sizeof(long long));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                       ^
  57. 	if(ptr !=NULL)
  58. 	{

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:75: error: Inferbo Alloc Is Big
  Length: 4294967295.
  73. 	if(ptr!=NULL)
  74. 	for(i=0;i<MAX;i++)
  75. 		ptr[i]=(unsigned int*) malloc(MAX_VAL*sizeof(unsigned int));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                               ^
  76. 
  77. 	for(i=0;i<5;i++)

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:103: error: Inferbo Alloc May Be Big
  Length: [1, 4294967295].
  101. void memory_allocation_failure_004 ()
  102. {
  103. 	unsigned int *ptr = (unsigned int*) malloc(memory_allocation_failure_004_func_001(0)*sizeof(unsigned int));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                            ^
  104. 	if(ptr !=NULL)
  105. 	{

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:181: error: Inferbo Alloc Is Big
  Length: 429496730.
  179.     	for(i=0;i<10;i++)
  180. 	    {
  181.     		memory_allocation_failure_006_gbl_doubleptr[i]=(int*) malloc(MAX_10*sizeof(int));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                                                   ^
  182.     		memory_allocation_failure_006_gbl_doubleptr[i][0] =10;
  183. 	    }

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:241: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 241 by call to `memory_allocation_failure_007_func_001()`, is not freed after the last access at line 241, column 10.
  239.         if(buf[j]!= NULL)
  240.     	{
  241.         	memory_allocation_failure_007_str_gbl = memory_allocation_failure_007_func_001(buf[j]);
                ^
  242.         }
  243.     }

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:257: error: Inferbo Alloc Is Big
  Length: 8589934590.
  255.   for(i=0;i<max_buffer;i++)
  256.   {
  257. 	   buffer = (char*) malloc(max_buffer * sizeof(char));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                            ^
  258.        break;
  259.   }

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:267: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 267 by call to `memory_allocation_failure_008_func_001()`, is not freed after the last access at line 267, column 2.
  265. {
  266. 	char *str = "STRINGMEM";
  267. 	memory_allocation_failure_008_func_001(str);
        ^
  268. }
  269. 

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:281: error: Inferbo Alloc Is Big
  Length: 429496728.
  279.     do
  280.     {
  281.     	buf = (char*) malloc(MAX_BUFFER * sizeof(char));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                          ^
  282.     	i++;
  283.     }while (i<MAX_VAL);

#8
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:281: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 281 by call to `malloc`, is not freed after the last access at line 281, column 6.
  279.     do
  280.     {
  281.     	buf = (char*) malloc(MAX_BUFFER * sizeof(char));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
            ^
  282.     	i++;
  283.     }while (i<MAX_VAL);

#9
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:320: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 320 by call to `malloc`, is not freed after the last access at line 320, column 4.
  318. 	    do
  319. 	    {
  320. 			memory_allocation_failure_010_arr_gbl = (memory_allocation_failure_010_s_001 *) malloc (10*sizeof(memory_allocation_failure_010_s_001));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
          ^
  321.             i++;
  322. 	    }while( i<=MAX_VAL);

#10
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:384: error: Inferbo Alloc May Be Big
  Length: [5, 4294967295].
  382. void memory_allocation_failure_011_func_002(void)
  383. {
  384. 	memory_allocation_failure_011_gbl_u1 = (memory_allocation_failure_011_uni_001 * )malloc(memory_allocation_failure_011_func_001(0)*sizeof( memory_allocation_failure_011_uni_001 )); /*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                                                                         ^
  385. 	memory_allocation_failure_011_gbl_u1->s1 = (memory_allocation_failure_011_s_001 *) malloc(sizeof(memory_allocation_failure_011_s_001));
  386. 	memory_allocation_failure_011_gbl_u1->s1->a = (int *) calloc ( 5,sizeof(int));

#11
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:422: error: Inferbo Alloc May Be Big
  Length: [5, 4294967295].
  420. {
  421. 	int buf1[5] = {1,2,3,4,5};
  422. 	memory_allocation_failure_012_buf2_gbl = (int *) calloc (memory_allocation_failure_012_func_001(0),sizeof(int));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                                         ^
  423. 	int buf3[5] = {1,2,3,4,5};
  424. 	int buf4[5] = {1,2,3,4,5};

#12
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:486: error: Inferbo Alloc May Be Big
  Length: [5, 4294967295].
  484.             	for(i=0;i<10;i++)
  485.         	    {
  486.             		dptr[i]=(char*) malloc(memory_allocation_failure_013_func_001(0)*sizeof(char));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                     ^
  487.         	    }
  488.     	  	}

#13
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:531: error: Inferbo Alloc May Be Big
  Length: [1, 4294967295].
  529. 			         {55,66,77,88}};
  530. 	int i,j;
  531. 	p= (int (*)[]) malloc (arr_value[1] *1 );/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                       ^
  532. 	if(p!=NULL)
  533. 	{

#14
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:641: error: Inferbo Alloc Is Big
  Length: 4294967295.
  639. void memory_allocation_failure_015_func_002 ()
  640. {
  641. 	memory_allocation_failure_015_gbl_ptr = (int *) malloc (memory_allocation_failure_015_func_001()*sizeof(int));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
                                                        ^
  642. }
  643. 

#15
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:696: error: Inferbo Alloc May Be Big
  Length: [5, 1073741824].
  694.    else
  695.    {
  696. 	   memory_allocation_failure_016_gbl_ptr1 = (int *) malloc (memory_allocation_failure_016_func_001(0)*sizeof(int));
                                                            ^
  697. 	   memory_allocation_failure_016_gbl_ptr2 = (int *) malloc (memory_allocation_failure_016_func_001(0)*sizeof(int));/*Tool should detect this line as error*/ /*ERROR:Memory allocation failure */
  698.    }

#16
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/memory_allocation_failure.c:704: error: Inferbo Alloc May Be Big
  Length: [5, 1073741824].
  702. void memory_allocation_failure_016 ()
  703. {
  704. 	int * ptr1 = (int *) malloc (memory_allocation_failure_016_func_001(0)*sizeof(int));
                             ^
  705. 	int * ptr2 = (int *) malloc (memory_allocation_failure_016_func_001(0)*sizeof(int));
  706.     *(ptr1+1) = 10;

Found 17 issues
                          Issue Type(ISSUED_TYPE_ID): #
  Inferbo Alloc May Be Big(INFERBO_ALLOC_MAY_BE_BIG): 7
          Inferbo Alloc Is Big(INFERBO_ALLOC_IS_BIG): 6
                            Memory Leak(MEMORY_LEAK): 4
